# lcquery

./: .gitignore  CITATION.cff  README.md  config.example.yaml  pyproject.toml
examples/: query_test.ipynb
lcquery/: __init__.py  master.py
lcquery/surveys/: asassn.py  atlas.py  band_reference.py  blackgem.py  cheops.py  crts.py  gaia.py  jvar.py  k2.py  nsc.py  ogle.py  skymapper.py  tess.py  ztf.py
